--- a/config_tun_mobile.json
+++ b/config_tun_mobile.json
@@ -16,6 +16,7 @@
     },
   "cache_file": {
     "enabled": true,
+    "path": "/etc/sing-box/cache.db",
     "store_fakeip": false
     }
   },
@@ -140,4 +141,5 @@
     ]
   }
 }
+
 
